shortcut icon and edit code